<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">twitter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">test</string>

    <!-- Top part navigation drawer -->
    <string name="profile">Profile</string>
    <string name="highlights">Highlights</string>
    <string name="moments">Moments</string>
    <string name="lists">Lists</string>
    <string name="connect">Connect</string>

    <!--Bottom part navigation drawer -->
    <string name="night_mode">Night mode</string>
    <string name="qr">QR code</string>
    <string name="settings">Settings and privacy</string>
    <string name="help">Help Centre</string>

    <!-- Twitter application resources -->
    <string name="KEY">gm9qRLDvRTzfIb3mn95O7P5K1</string>
    <string name="SECRET">t3VfHC9GiQZbKD13SxVfiJ4PHe717iTdhXlc1JgAYvvTRgivkY</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>

