<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_highlights"
            android:icon="@drawable/ic_highlights"
            android:title="@string/highlights" />
        <item
            android:id="@+id/nav_moments"
            android:icon="@drawable/ic_lighting"
            android:title="@string/moments" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_lists"
            android:title="@string/lists" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_connect"
            android:title="@string/connect" />
    </group>

    <group
        android:id="@+id/menu_two"
        android:checkableBehavior="single">

            <item
                android:id="@+id/nav_night_mode"
                android:title="@string/night_mode" />
            <item
                android:id="@+id/nav_qr"
                android:title="@string/qr" />
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/help" />
    </group>

</menu>
